# aoc-2024-rust

./: Cargo.toml  README.md
aoc/: Cargo.toml
aoc/src/: lib.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  lib.rs  main.rs
