[package]
name = "aoc_2024_rust"
version = "0.1.0"
authors = ["Philipp Bandow <bandow@formulastudent.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0"
aoc-runner-derive = "0"
cargo-aoc = "0"
itertools = "0"
regex ="1"
countmap = "0"
itermore = "0"
nalgebra = "0"
statistical = "1"
pathfinding = "3"
hex = "0"
scan_fmt = "0"
glam = "0"
range-ext = "0"
aoc = {path = "aoc" }
thiserror = "1.0.37"
sscanf = "0.4.0"
ndarray = "0.15.6"
fxhash = "0.2.1"
rayon = "1.6.1"
num = "0.4"
bucket_queue = "2.0.0"
indexmap = "2.1.0"
rustc-hash = "1.1.0"